examples/negative/modules/import_keyword_name.kai
# Negative fixture (#520 / modules): `import` is followed by a
# reserved keyword (`fn`) instead of a module name. Parser must
# reject with "expected module name after `import`".

import fn

fn main() : Int = 0
